# MySite

HTML/: form.html  index.html  (+2 more)
mysite/: Dockerfile  deviices.csv  docker-compose.yaml  log.txt  log.txt.3  pyproject.toml
mysite/base/: settings.py  urls.py
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: models.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py
mysite/myauth/templates/myauth/: about-me.html  base.html  login.html  register.html
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: base.html  file-upload.html  request-query-params.html  user-bio-form.html
mysite/shopapp/: admin.py  admin_mixin.py  forms.py  models.py  serializers.py  urls.py  views.py
mysite/shopapp/management/commands/: bulk_actions.py  create_order.py  create_products.py  selecting_fields.py  update_order.py
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_product_description_alter_product_name.py
(+15 files in other folders)
