[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["ValKamch <valkamch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.0.8"
pillow = "^10.2.0"
djangorestframework = "3.14.0"
django-filter = "^23.5"
docutils = "^0.20.1"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
